AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = $(wildcard *.h)

noinst_LIBRARIES = libutils.a

libutils_a_SOURCES = byteorder.c \
                     eprintf.c \
                     gen_utils.c \
                     inetfns.c \
                     event.c \
                     netwrap_posix.c
